# varnishevent

./: .dir-locals.el  .gitignore  LICENSE  Makefile.am  README.md  README.rst  autogen.sh  configure.ac
doc/: varnishevent.rst
src/: Makefile.am  config.c  data.c  data.h  format.c  format.h  handler.c  hdrtrie.c  hdrtrie.h  log.c  monitor.c  signals.h  spscq.c  strfTIM.c  strfTIM.h  varnishevent.c  varnishevent.h  writer.c  writer.h
src/test/: Makefile.am  backend_client.conf  minunit.h  ncsa.sh  raw.conf  regress.sh  test_data.c  test_format.c  test_hdrtrie.c  test_strfTIM.c  test_writer.c  varnishevent.conf  vslarg.sh
